--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -10,10 +10,10 @@ h1 {
 textarea {
   color        : #000000;
   font-family  : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height       : 3em;
+  height       : 1em;
   line-height  : 1em;
   margin       : 0;
-  min-height   : 3em;
+  min-height   : 1em;
   overflow     : hidden;
   overflow-wrap: break-word;
   padding      : 2%;
@@ -331,13 +331,13 @@ button[type="action"] {
 
 /* hide/show areas */
 .sheet-expand {
-	opacity: 0;
+    opacity: 0;
   position: absolute;
   top: -8px;
   left: -4px;
   width: 18px;
   height: 18px;
-	z-index: 6;
+    z-index: 6;
 }
 
 button.sheet-toggles {
@@ -759,7 +759,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 .sheet-weapons-grid {
   display: grid;
-  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 2fr 10fr;
+  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 10fr;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 0 0 2px 0;
@@ -811,18 +811,10 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 }
 
 .sheet-weapons-box9 {
-  grid-row-start: 1;
-  grid-column-start: 9;
-}
-
-.sheet-weapons-box10 {
   grid-row-start: 2;
   grid-column: 1/10;
 }
 
-.sheet-weapons-box11 {
-  grid-column-start: 1;
-}
 /* ---------------------------------- Dice Pool */
 
 div.sheet-dice_pool-grid {
@@ -1133,7 +1125,7 @@ div.sheet-vehicle_gear-grid {
   text-align: center;
 }
 
-div.sheet-vehicle_gear-grid input[name="attr_gear_name"],
+div.sheet-gear-grid input[name="attr_gear_name"],
 div.sheet-vehicle_gear-grid input[name="attr_vehicle_gear_name"] {
   grid-column: 1 / 2;
 }
@@ -1364,7 +1356,7 @@ div.sheet-experience-box div.sheet-dots {
 .sheet-relationships-grid,
 .sheet-notes-grid {
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 2fr 3fr 1fr;
   grid-column-gap: 2px;
   grid-row-gap: 1px;
 }
@@ -1379,10 +1371,14 @@ div.sheet-experience-box div.sheet-dots {
   box-sizing: border-box;
 }
 
+div.sheet-relationships-grid textarea {
+  width: 90%;
+}
+
 .sheet-relationships-box1,
 .sheet-notes-box1 {
   grid-row-start: 1;
-  grid-column: 1/3;
+  grid-column: 1/4;
 }
 
 .sheet-relationships-box2,
@@ -2148,7 +2144,7 @@ div.sheet-dots input[type="radio"] {
 
 div.sheet-dots input[type="radio"] + span {
   background-color: #c77624;
-  border          : 0.15em solid #000;
+  border          : 0.15em solid #2d281d;
   border-radius   : 1.5em;
   color           : #fff;
   display         : inline-block;
@@ -2161,6 +2157,7 @@ div.sheet-dots input[type="radio"] + span {
 
 div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {    
    background-color: transparent;
+   color: #2d281d;
 }
 
 div.sheet-rot-grid input[type="number"].sheet-input-number {
