--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -759,7 +759,7 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
 
 .sheet-weapons-grid {
   display: grid;
-  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 10fr;
+  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 2fr 9fr;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
   padding: 0 0 2px 0;
@@ -1353,26 +1353,24 @@ div.sheet-experience-box div.sheet-dots {
 
 /* ---------------------------------- Relationships/Notes */
 
-.sheet-relationships-grid,
-.sheet-notes-grid {
-  display: grid;
-  grid-template-columns: 2fr 3fr 1fr;
-  grid-column-gap: 2px;
-  grid-row-gap: 1px;
+div.sheet-relationships-grid,
+div.sheet-notes-grid {
+  display              : grid;
+  grid-template-columns: 5fr 14fr 1fr;
+  grid-column-gap      : 2px;
+  grid-row-gap         : 1px;
 }
 
-.sheet-relationships-grid > .sheet-relationships-box3,
-.sheet-relationships-grid > .sheet-relationships-box4,
-.sheet-notes-grid > .sheet-notes-box3,
-.sheet-notes-grid > .sheet-notes-box4 {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  box-sizing: border-box;
+div.sheet-relationships-grid hr,
+div.sheet-notes-grid hr {
+  background-color: #2d241d;
+  border          : 0.1em solid #2d241d;
+  grid-column     : 1/4;
+  margin          : 0.1em;
 }
 
 div.sheet-relationships-grid textarea {
-  width: 90%;
+  width: 95%;
 }
 
 .sheet-relationships-box1,
@@ -1381,129 +1379,105 @@ div.sheet-relationships-grid textarea {
   grid-column: 1/4;
 }
 
-.sheet-relationships-box2,
-.sheet-notes-box2 {
-  grid-row-start: 2;
-  grid-column: 1/3;
+.sheet-relationships-box2{
+  grid-row-start: 1;
+  grid-column: 3;
 }
 
-.sheet-relationships-box3,
-.sheet-notes-box3 {
+div.sheet-relationships-box3 {
   grid-row-start: 3;
-  grid-column-start: 1;
+  grid-column: 1/4;
 }
 
-.sheet-relationships-box4,
-.sheet-notes-box4 {
-  grid-row-start: 3;
-  grid-column: 2/3;
+div.sheet-relationships-grid input.sheet-input-number {
+  height: 2.3em;
+  font-weight: bold;
 }
 
-/* ---------------------------------- Coins */
-
-.sheet-coins-grid {
-  display: grid;
-  grid-template-columns: 5.25em repeat(3, 1fr);
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
-  padding: 0 0 2px 0;
+div.sheet-relationships-grid label + input {
+  grid-column: 2 / 4;
+  width: 100%;
 }
 
-.sheet-coins-grid > div {
-  display: flex;
+div.sheet-relationships-grid label[data-i18n="i-hate"],
+div.sheet-relationships-grid input[name="attr_hate"]  {
+  grid-row: 4;
+}
+
+div.sheet-relationships-grid label[data-i18n="i-protect"],
+div.sheet-relationships-grid input[name="attr_protect"] {
+  grid-row: 5;
+}
+
+div.sheet-relationships-grid label[data-i18n="i-dream"],
+div.sheet-relationships-grid input[name="attr_dream"] {
+  grid-row: 6;
+}
+
+/* Styled Check boxes */
+  div.sheet-relationships-grid input[type="checkbox"] {
+    grid-column: 3;
+    grid-row   : 1;
+    height     : 2em;
+    opacity    : 0;
+    position   : relative;
+    width      : 2em;
+    z-index    : 3;
+  }
+
+     /* This is the box that the check will live in */
+  div.sheet-relationships-grid input[type="checkbox"] + span  {
+    background   : #fff;
+    border       : 0.2em solid #000;
+    box-shadow   : inset 0px 0px 3px 1px #7c7c7c;
+    display      : inline-block;
+    grid-column  : 3;
+    grid-row     : 1;
+    height       : 1em;
+    margin       : 0.5em;
+    width        : 1em;
+  }
+
+  /* This is for the checkmark */
+  div.sheet-relationships-grid input[type="checkbox"]:checked + span::before {
+    color      : #c77624;
+    content    : "3";
+    display    : inline-block;
+    font-family: pictos;
+    font-size  : 2em;
+    left       : -0.1em;
+    position   : relative;
+    text-align : center;
+    top        : -0.5em;
+    width      : 1em;
+  }
+
+
+  /* Notes */
+div.sheet-notes-grid {
+  display              : grid;
+  grid-template-columns: 1fr 3fr;
+  grid-column-gap      : 2px;
+  grid-row-gap         : 1px;
+}
+
+div.sheet-notes-box2 {
+  grid-column: 1/4;
+}
+
+div.sheet-notess-box2 textarea {
+  height: 2.5em;
+  min-height: 2.5em;
+}
+
+.sheet-notes-grid > input.sheet-input-number,
+.sheet-notes-grid > textarea {
+  display        : flex;
   justify-content: space-around;
-  align-items: center;
+  align-items    : center;
+  box-sizing     : border-box;
 }
 
-.sheet-coins-box {
-  grid-column: 1/5;
-  grid-row-start: 1;
-}
-
-.sheet-coins-box1 {
-  grid-column-start: 1;
-  grid-row-start: 1;
-}
-
-.sheet-coins-box2 {
-  grid-column-start: 2;
-  grid-row-start: 1;
-}
-
-.sheet-coins-box3 {
-  grid-column-start: 3;
-  grid-row-start: 1;
-}
-
-.sheet-coins-box4 {
-  grid-column-start: 4;
-  grid-row-start: 1;
-}
-
-.sheet-coins-box5 {
-  grid-column-start: 1;
-  grid-row-start: 2;
-}
-
-/* ---------------------------------- Spells */
-
-.sheet-spells-grid {
-  display: grid;
-  grid-template-columns: 2.5em auto 3em 3em 5.5em 6em 11.5em;
-  grid-column-gap: 2px;
-  grid-row-gap: 2px;
-}
-
-.sheet-spells-box6 > div > .sheet-input {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.sheet-spells-box {
-  grid-row-start: 1;
-  grid-column: 1/8;
-}
-
-.sheet-spells-box0 {
-  grid-row-start: 1;
-  grid-column-start: 1;
-}
-
-.sheet-spells-box1 {
-  grid-row-start: 1;
-  grid-column-start: 2;
-}
-
-.sheet-spells-box2 {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-spells-box3 {
-  grid-row-start: 1;
-  grid-column-start: 4;
-}
-
-.sheet-spells-box4 {
-  grid-row-start: 1;
-  grid-column-start: 5;
-}
-
-.sheet-spells-box5 {
-  grid-row-start: 1;
-  grid-column-start: 6;
-}
-
-.sheet-spells-box6 {
-  grid-row-start: 1;
-  grid-column-start: 7;
-}
-
-.sheet-spells-box7 {
-  grid-row-start: 2;
-  grid-column: 1/8;
-}
 
 /* ark grid layout */
 
