Adding settings tab & small adjustments

--- a/Splittermond/Sheet.css
+++ b/Splittermond/Sheet.css
@@ -117,8 +117,9 @@ input.sheet-tab2:checked ~ div.sheet-section-Fertigkeiten,,
 input.sheet-tab21:checked ~ div.sheet-section-Fertigkeiten,
 input.sheet-tab3:checked ~ div.sheet-section-Kampf,
 input.sheet-tab4:checked ~ div.sheet-section-Entwicklung,
-input.sheet-tab5:checked ~ div.sheet-section-Tiergefaehrten,
-input.sheet-tab6:checked ~ div.sheet-section-Genesis,
+input.sheet-tab5:checked ~ div.sheet-section-Einstellungen,
+input.sheet-tab6:checked ~ div.sheet-section-Werkzeuge,
+input.sheet-tab29:checked ~ div.sheet-section-npc,
 input.sheet-tab29:checked ~ div.sheet-section-npc {
     max-height: 999999px;
     visibility: visible;
