fix roll template

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -253,7 +253,6 @@ button {
 
 button:hover {
     color       : #fcd67b;
-    font-weight : bold;
     background-color: #8c4110;
 }
 
@@ -678,7 +677,6 @@ input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothe
   grid-template-columns: 6fr 5em 2fr 6em;
   grid-row-gap: 2px;
   grid-column-gap: 2px;
-  padding: 0 0 2px 0;
 }
 
 .sheet-injuries-grid label {
@@ -1998,9 +1996,7 @@ input.sheet-negative:checked + span::before {
     font-size: 0.75em;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-base-dice,
-.sheet-rolltemplate-rolls .sheet-template-skill-dice,
-.sheet-rolltemplate-rolls .sheet-template-black-dice {
+.sheet-rolltemplate-rolls .sheet-dice   {
     border       : 1px solid #000;
     border-radius: 5px;
     color        : #fff;
@@ -2009,7 +2005,8 @@ input.sheet-negative:checked + span::before {
     text-align   : center;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-base-dice {
+.sheet-rolltemplate-rolls .sheet-template-base-dice,
+.sheet-rolltemplate-rolls .sheet-template-other-dice {
   background-color: yellow;
   color           : #000;
 }
@@ -2018,32 +2015,37 @@ input.sheet-negative:checked + span::before {
   background-color: #235402;
 }
 
-.sheet-rolltemplate-rolls .sheet-template-black-dice {
+.sheet-rolltemplate-rolls .sheet-template-gear-dice {
   background-color: #000;
 }
 
+.sheet-rolltemplate-rolls .sheet-template-purple-dice {
+  background-color: #800080;
+}
+
 .sheet-rolltemplate-rolls .sheet-template-skill-dice img,
-.sheet-rolltemplate-rolls .sheet-template-black-dice  img {
+.sheet-rolltemplate-rolls .sheet-template-gear-dice img,
+.sheet-rolltemplate-rolls .sheet-template-purple-dice img {
   -webkit-filter: invert(100%);
 }
 
-.sheet-rolltemplate-rolls .sheet-template-base-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-skill-dice > .inlinerollresult,
-.sheet-rolltemplate-rolls .sheet-template-black-dice > .inlinerollresult {
-  font-size: 2em;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
-  font-weight: bold;
+.sheet-rolltemplate-rolls .sheet-dice > .inlinerollresult {
   background-color: transparent;
-  border: none;
-  display: inline-block;
-  margin: 50% 0 50% 0;
-  line-height: 0;
+  border          : none;
+  display         : inline-block;
+  font-family     : "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-size       : 2em;
+  font-weight     : bold;
+  line-height     : 0;
+  margin          : 50% 0 50% 0;
+  opacity         : 0.4;
 }
 .sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
 .sheet-rolltemplate-rolls .inlinerollresult.importantroll,
 .sheet-rolltemplate-rolls .inlinerollresult.fullfail  {
     color: inherit;
     border: none;
+    opacity: 1;
 }
 
 /* Mutant Year Zero */
