HSD2 V1.05: Adjusted Techniques & Quirks sections to fit 9 rows each

--- a/Hc Svnt Dracones Second Edition/hsd2.css
+++ b/Hc Svnt Dracones Second Edition/hsd2.css
@@ -269,11 +269,11 @@ div.sheet-comps > input {
   width: 45%;
 }
 
-div.sheet-comps > label{
+div.sheet-comps > span{
   margin-bottom: 0px;
   padding-left: 40px;
-  padding-top: 4px;
-  padding-bottom: 4px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   width: 32%;
 }
 
@@ -282,7 +282,7 @@ div.sheet-techq {
   grid-area: techq;
 }
 
-div.sheet-techq > label {
+div.sheet-techq > span {
   padding-left: 140px;
 }
 
@@ -296,13 +296,17 @@ div.sheet-quirks {
   grid-area: quirks;
 }
 
-div.sheet-quirks > label {
+div.sheet-quirks > span {
   padding-left: 150px;
 }
 
 div.sheet-quirks input[type="text"] {
   margin-left:5px;
   width:82%;
+}
+div.sheet-quirks input[type="number"] {
+  padding-top: 3px;
+  padding-bottom: 3px;
 }
 
 /* ------------------------- Page 2 ------------------------- */
@@ -615,11 +619,12 @@ div.sheet-pg1 {
   display: grid;
   grid-gap: 4px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 30px 1fr 1fr 2fr;
+  grid-template-rows: 6fr 30px 4fr 8fr 2fr 10fr;
   grid-template-areas:"common ability"
                       "battle comps  "
                       "attrs  comps  "
                       "attrs  techq  "
+                      "profs  techq  "
                       "profs  quirks ";
   width: 1200px;
   height: 900px;
