HSD2 V1.06: fixed Notoriety tracker rendering for Chrome

--- a/Hc Svnt Dracones Second Edition/hsd2.css
+++ b/Hc Svnt Dracones Second Edition/hsd2.css
@@ -40,7 +40,6 @@
 .sheet-flex-col-wrap {
   display: flex;
   flex-flow: column wrap;
-  -webkit-flex-direction: column;
 }
 
 .sheet-flex-center {
@@ -520,6 +519,11 @@ input.sheet-grey{
 /* ------ Notoriety Tracker section -------- */
 .sheet-notoriety-tracker {
   grid-area: notoriety-tracker;
+  -webkit-flex-flow: column nowrap;
+   flex-flow: column nowrap;
+  min-height: 1px;
+  -webkit-flex-shrink: 1;
+  flex-shrink: 1;
 }
 
 .sheet-notoriety-tracker div.sheet-trackerline {
@@ -539,7 +543,7 @@ input.sheet-grey{
 }
 
 .sheet-notoriety-tracker hr {
-  width: 100%;
+  width: 90%;
 }
 
 .sheet-notoriety-tracker div.sheet-landmark-center {
