--- a/DemonTheDescent/DemonTheDescent.css
+++ b/DemonTheDescent/DemonTheDescent.css
@@ -283,24 +283,8 @@ input.sheet-blank:checked ~ input.sheet-empty
 	float: right;
 	margin-right: 5.5%;
 }
-.charsheet .sheet-wwform{
-	width: 20%;
-	float: left;
-}
-.charsheet .sheet-wwformnotes{
-	text-align: right;
-	border-top: 1px solid grey;
-	height: 340px;
-}
 .charsheet .sheet-page2att{
 	height: 80px;
-}
-.charsheet .sheet-totemstats .sheet-col{
-	text-align: right;
-}
-.charsheet .sheet-totemstats input[type=text], .charsheet .sheet-giftsrites input[type=text]{
-	float: left;
-	width: 63%;
 }
 .charsheet .sheet-giftsrites input[type=text]{
 	margin-bottom: 5px;
@@ -338,7 +322,6 @@ input.sheet-blank:checked ~ input.sheet-empty
 }
 .charsheet input.sheet-facets:checked ~ div.sheet-facets{
 	display: block;
-	height: 110px;
 }
 .charsheet .sheet-facetinfo{
 	float: right;
@@ -430,7 +413,7 @@ input.sheet-blank:checked ~ input.sheet-empty
 	border-bottom: black 1px solid;
 }
 .charsheet .sheet-cost{
-	width: 70% !important;
+	width: 60% !important;
 	float: right !important;
 }
 .charsheet .sheet-boltholeinfo input[type=text]{
@@ -444,7 +427,7 @@ input.sheet-blank:checked ~ input.sheet-empty
 }
 .charsheet button[type=roll]:before{
     font-family: "dicefontd10";
-    content: "k";
+    content: "K";
 	color: black;
 	font-weight: bold;
 }
@@ -453,5 +436,71 @@ input.sheet-blank:checked ~ input.sheet-empty
 	height: 5.5em;
 }
 .charsheet fieldset{
-	margin-bottom: 3px;
+	margin-bottom: 5px;
+}
+.charsheet input:placeholder-shown{
+		background-color: #fdf6ec !important;
+		border-top: 1px dotted #e6bb81 !important;
+		border-left: 1px dotted #e6bb81 !important;
+		border-right: 1px dotted #e6bb81 !important;
+		text-transform: capitalize !important;
+	}
+.charsheet textarea:placeholder-shown {
+		background-color: #fdf6ec !important;
+		text-transform: capitalize !important;
+	}
+.charsheet .sheet-rolltemplate-demon table {
+    width: 200px;
+    padding: 2px;
+    font-family: "Console", monospace;
+    font-weight: bold;
+    border-spacing: 0;
+	box-shadow: inset 0 0 10px #969CAB;
+	background: #000001;
+	border: 5px solid #AFAFAF;
+}
+ 
+.charsheet .sheet-rolltemplate-demon th {
+	color: #AFAFAF;
+    padding: 15px 2px 2px 20px;
+	line-height: 1.2em;
+	font-size: 1.2em;
+    text-align: left;
+	border: none;
+} 
+.charsheet .sheet-rolltemplate-demon td {
+    padding-left: 20px;
+    font-size: 1.0em;
+    vertical-align: top;
+	border: none;
+}
+.charsheet .sheet-rolltemplate-demon tr {
+	border: none;
+} 
+.charsheet .sheet-rolltemplate-demon .sheet-result {
+    font-size: 1.2em;
+    text-align: center;
+    color: #AFAFAF;
+    padding-bottom: 20px;
+}
+ 
+.charsheet .sheet-rolltemplate-demon .inlinerollresult  {
+    background-color: transparent;
+    color: #AFAFAF;
+    border: none;
+}
+ 
+.charsheet .sheet-rolltemplate-demon .inlinerollresult.fullcrit {
+   color: #3FB315;
+    border: none;
+}
+ 
+.charsheet .sheet-rolltemplate-demon .inlinerollresult.fullfail {
+    color: #AFAFAF;
+    border: none;
+}
+ 
+.charsheet .sheet-rolltemplate-demon .inlinerollresult.importantroll {
+	color: #3FB315;
+    border: none;
 }
