Add option to make the Ladder rollable

--- a/Fate Core v2/fate.css
+++ b/Fate Core v2/fate.css
@@ -288,14 +288,20 @@ button[type=roll]:hover,
 .sheet-hint,
 .sheet-options-flag:checked ~ .sheet-display,
 .sheet-notesTab-flag:checked ~ .sheet-section-notes,
-.sheet-options-flag:checked ~ .sheet-skills-pyramid .sheet-display {
+.sheet-options-flag:checked ~ .sheet-skills-pyramid .sheet-display,
+.sheet-rollable-flag-true,
+.sheet-rollable-flag:checked ~ .sheet-skills-pyramid .sheet-rollable-flag-false,
+.sheet-ladder-rollable-true {
     display: none;
 }
 
 .sheet-display,
 .sheet-hints-flag:checked ~ .sheet-hint,
 .sheet-options-flag:checked ~ .sheet-options,
-.sheet-options-flag:checked ~ .sheet-skills-pyramid .sheet-options {
+.sheet-options-flag:checked ~ .sheet-skills-pyramid .sheet-options,
+.sheet-rollable-flag-false,
+.sheet-rollable-flag:checked ~ .sheet-skills-pyramid .sheet-rollable-flag-true,
+.sheet-ladder-rollable:checked ~ .sheet-ladder-rollable-true {
     display: block;
 }
 
@@ -490,6 +496,10 @@ button[type=roll]:hover,
 .sheet-skills-pyramid-shiftLevel {
     display: inline-block;
     width: 12.5%;
+    text-align: right;
+}
+
+.sheet-skills-pyramid-shiftLevel button[type="roll"] {
     text-align: right;
 }
 
