Roll template cleaned up

--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -10,13 +10,13 @@ h1 {
 textarea {
   color        : #000000;
   font-family  : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  height       : 1em;
+  height       : 3em;
   line-height  : 1em;
   margin       : 0;
   min-height   : 1em;
   overflow     : hidden;
   overflow-wrap: break-word;
-  padding      : 2%;
+  padding      : 1%;
   resize       : vertical;
   white-space  : pre-line;
 }
@@ -312,7 +312,9 @@ input[type="checkbox"].sheet-input {
   height: 1.1em;
 }
 
-input[disabled].sheet-input-number, input[readonly].sheet-input, textarea[disabled].sheet-input, textarea[readonly].sheet-input, input[readonly].sheet-input-number {
+input[disabled].sheet-input-number, 
+input[readonly].sheet-input, textarea[disabled].sheet-input, 
+textarea[readonly].sheet-input, input[readonly].sheet-input-number {
   background-color: #eeeeee;
   border-color: #6e6e6e;
   color: #6e6e6e;
@@ -1983,20 +1985,20 @@ input.sheet-negative:checked + span::before {
 }
 
 .sheet-rolltemplate-rolls .sheet-template-inline {
-  font-size: 2em;
-  font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
+  font-size       : 2em;
+  font-family     : "Palatino Linotype", "Book Antiqua", Palatino, serif;
   background-color: transparent;
-  border: none;
-  display: inline-block;
-  margin: 50% 0 50% 0;
-  line-height: 0;
+  border          : none;
+  display         : inline-block;
+  margin          : 50% 0 50% 0;
+  line-height     : 0;
 }
 
 .sheet-rolltemplate-rolls .sheet-template-smaller {
     font-size: 0.75em;
 }
 
-.sheet-rolltemplate-rolls .sheet-dice   {
+.sheet-rolltemplate-rolls .sheet-dice {
     border       : 1px solid #000;
     border-radius: 5px;
     color        : #fff;
@@ -2040,12 +2042,44 @@ input.sheet-negative:checked + span::before {
   margin          : 50% 0 50% 0;
   opacity         : 0.4;
 }
+
 .sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
 .sheet-rolltemplate-rolls .inlinerollresult.importantroll,
 .sheet-rolltemplate-rolls .inlinerollresult.fullfail  {
     color: inherit;
     border: none;
-    opacity: 1;
+}
+
+.sheet-rolltemplate-rolls .inlinerollresult.fullcrit,
+.sheet-rolltemplate-rolls .sheet-template-base-dice .inlinerollresult.fullfail,
+.sheet-rolltemplate-rolls .sheet-template-gear-dice .inlinerollresult.fullfail,
+.sheet-rolltemplate-rolls .sheet-template-other-dice .inlinerollresult.fullfail {
+  margin-bottom: 0em;
+  margin-left  : -9%;
+  margin-top   : 0em;
+  max-width    : 100%;
+  opacity      : 1;
+}
+
+/* TURN THE GEAR & SKILL DICE WHITE */
+.sheet-rolltemplate-rolls .sheet-template-gear-dice .inlinerollresult.fullcrit,
+.sheet-rolltemplate-rolls .sheet-template-gear-dice .inlinerollresult.fullfail,
+.sheet-rolltemplate-rolls .sheet-template-skill-dice .inlinerollresult.fullcrit,
+.sheet-rolltemplate-rolls .sheet-template-skill-dice .inlinerollresult.fullfail {
+    -webkit-filter: invert(100%);
+}
+
+.sheet-rolltemplate-rolls .inlinerollresult.fullcrit {
+  content: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/radiation.png");
+}
+
+.sheet-rolltemplate-rolls .sheet-template-base-dice .inlinerollresult.fullfail,
+.sheet-rolltemplate-rolls .sheet-template-other-dice .inlinerollresult.fullfail {
+  content: url(https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/biohazard.png);
+}
+
+.sheet-rolltemplate-rolls .sheet-template-gear-dice .inlinerollresult.fullfail {
+  content: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/boom.png");
 }
 
 /* Mutant Year Zero */
@@ -2099,7 +2133,6 @@ input.sheet-display[value*="body"] ~ div.sheet-appearance-box5 span,
 input.sheet-display[value*="clothing"] ~ div.sheet-appearance-box7 span {
   display: none;
 }
-
 
 div.sheet-dots {
   margin-top: 2%;
