Redesign the Settings Page

--- a/Fate Core v2/fate.css
+++ b/Fate Core v2/fate.css
@@ -719,6 +719,23 @@ span.sheet-consequence-healing {
     margin-left: -1.5px !important;
 }
 
+/* === SETTINGS === */
+.sheet-settings {
+    display: flex;
+}
+
+.sheet-setting {
+    width: 200px;
+    margin: 4px;
+    padding: 4px;
+    box-sizing: border-box;
+}
+
+.sheet-setting input[type="text"],
+.sheet-setting select {
+    width: 100%;
+}
+
 /* === ROLL TEMPLATE === */
 .sheet-rolltemplate-fatepoints .sheet-rollTemplate,
 .sheet-rolltemplate-refresh .sheet-rollTemplate,
