Revert "uc-532 fix points (#5207)"
This reverts commit 8b504bb56e7085cca5c8f1e9551d7a4ef236b622.

--- a/Gumshoe by Roll20/GUMSHOE.css
+++ b/Gumshoe by Roll20/GUMSHOE.css
@@ -144,8 +144,8 @@ input.sheet-selector-switch {
 	display: none;
 }
 
-input.sheet-system[value="nba"] ~ .sheet-master-container .sheet-container .sheet-nba-hide,
-input.sheet-system[value="toc"] ~ .sheet-master-container .sheet-container .sheet-toc-hide,
+input.sheet-nba:checked ~ .sheet-master-container .sheet-nba-hide,
+input.sheet-toc:checked ~ .sheet-master-container .sheet-toc-hide,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-npc-hide {
 	display: none;
 }
@@ -1369,14 +1369,14 @@ input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-co
 }
 
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item,
-input.sheet-npc:checked ~ input.sheet-system[value="nba"] ~ .sheet-master-container .sheet-container .sheet-abilities-col .sheet-abilities-item.sheet-nba-npc,
+input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-abilities-col .sheet-abilities-item.sheet-nba-npc,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item span span,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-item .sheet-max,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-header,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .sheet-max + div,
-input.sheet-npc:checked ~ input.sheet-system[value="nba"] ~ .sheet-master-container .sheet-container .sheet-abilities-item.sheet-npc-ability.sheet-nba-hide,
-input.sheet-npc:checked ~ input.sheet-system[value="toc"] ~ .sheet-master-container .sheet-container .sheet-abilities-item.sheet-npc-ability.sheet-toc-hide,
+input.sheet-npc:checked ~ input.sheet-nba:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability.sheet-nba-hide,
+input.sheet-npc:checked ~ input.sheet-toc:checked ~ .sheet-master-container .sheet-abilities-item.sheet-npc-ability.sheet-toc-hide,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities .sheet-free,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities .sheet-free + span,
 input.sheet-npc:checked ~ input.sheet-selector-switch:checked ~ .sheet-master-container .sheet-abilities-col .repcontrol,
