--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -381,13 +381,38 @@ button.sheet-toggles:hover {
 }
 
 /* character grid layout */
-
-.sheet-character-grid {
+div.sheet-grid {
   display: grid;
+  grid-column-gap: 0.2em;
+  grid-row-gap: 0.2em;
+}
+
+div.sheet-character-grid {
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: repeat(4, auto);
-  grid-column-gap: 4px;
-  grid-row-gap: 4px;
+}
+
+div.sheet-second-row {
+  display: inline-block;
+  width: 100%;
+  margin-top: 0.2em;
+}
+
+div.sheet-second-row  div.sheet-armor-col,
+div.sheet-second-row  div.sheet-gear-col  {
+   display: inline-block;
+   vertical-align: top;
+}
+
+div.sheet-second-row  div.sheet-armor-col {
+  width: 67%;
+}
+
+div.sheet-second-row  div.sheet-gear-col { 
+  width: 32.5%;
+}
+
+div.sheet-armor-col div.sheet-grid {
+  grid-template-columns: 1fr 1fr;
 }
 
 .sheet-box {
@@ -438,55 +463,51 @@ button.sheet-toggles:hover {
   grid-column-start: 3;
 }
 
-.sheet-rot-level {
-  grid-row-start: 7;
+div.sheet-rot-level {
+  grid-row-start: 1;
   grid-column: 1/1;
 }
 
-.sheet-character-armor {
-  grid-row-start: 7;
+div.sheet-character-armor {
+  grid-row-start: 1;
   grid-column: 2/2;
 }
 
-.sheet-character-gear {
-  grid-row-start: 7;
-  grid-column-start: 3;
-  grid-row-end: span 5;
+div.sheet-character-gear {
+  grid-row-start: 1;
+  grid-column-start: 1;
 }
 
-
 div.sheet-character-experience {
-  grid-row-start: 8;
+  grid-row-start: 2;
   grid-column: 1 / 1;
 }
 
 div.sheet-experience-dots {
-  grid-row-start: 8;
+  grid-row-start: 2;
   grid-column: 2 / 2;
   padding: 0.5em
 }
 
-.sheet-character-relationships {
-  grid-row-start: 9;
+div.sheet-character-relationships {
+  grid-row-start: 3;
   grid-column: 1 / 3;
   grid-row-end: span 2;
 }
 
-.sheet-character-vehicle {
-  grid-row-start: 11;
-  grid-column-start: 3;
-}
-
-.sheet-character-vehicle_gear {
-  grid-row-start: 12;
-  grid-column-start: 3;
-  grid-row-end: span 4;
-}
-
-.sheet-character-notes {
+div.sheet-character-notes {
   grid-column: 1/3;
   grid-row-end: span 3;
 }
+
+div..sheet-character-vehicle {
+  grid-column-start: 3;
+}
+
+div..sheet-character-vehicle_gear {
+  grid-column-start: 3;
+}
+
 
 /* ---------------------------------- Attributes */
 .sheet-attributes-grid {
