Added new effects template and added effect rolls to equipment

--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -56,6 +56,11 @@ button[type=roll].sheet-d100::before {
     font-family: 'dicefontd10';
     font-size: 175%;
 }
+button[type=roll].sheet-info-btn::before {
+    font-family: 'pictos custom';
+    content: 'q';
+    font-size: 125%;
+}
 button[type=roll].sheet-reduced-size {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -2025,7 +2030,13 @@ div.sheet-equipment-row {
 div.sheet-equipment-item {
     display: inline-block;
     text-align: center;
-    width: 49%;
+    width: 44.75%;
+}
+
+div.sheet-equipment-btn {
+    display: inline-block;
+    text-align: center;
+    width: 4%;
 }
 
 div.sheet-equipment-location {
@@ -2039,6 +2050,16 @@ div.sheet-equipment-number {
     display: inline-block;
     text-align: center;
     width: 10%;
+}
+
+textarea.sheet-equipment-traits {
+    height: 3em;
+}
+textarea.sheet-equipment-description {
+    height: 4em;
+}
+textarea.sheet-equipment-macro {
+    height: 3em;
 }
 
 /* Wealth */
@@ -2410,6 +2431,48 @@ div.sheet-mook-btn {
 .sheet-rolltemplate-weapon .inlinerollresult.importantroll {
   border: 1px solid black;
   background: #BEBEBE;
+}
+
+.sheet-rolltemplate-effect div.sheet-header {
+  width: 100%;
+  text-align: center;
+  color: lightgray;
+  background: black;
+  font-size: 120%;
+}
+.sheet-rolltemplate-effect div.sheet-subheader {
+  width: 100%;
+  text-align: center;
+  color: lightgray;
+  background: black;
+  font-size: 75%;
+}
+.sheet-rolltemplate-effect div.sheet-content {
+  border: 1px black solid;
+  padding: 2px;
+  background: white;
+}
+.sheet-rolltemplate-effect .sheet-italics {
+  font-style: italic;
+}
+.sheet-rolltemplate-effect .inlinerollresult  {
+  display: inline-block;
+  text-align: center;
+  padding: 0px;
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-effect .inlinerollresult.fullcrit {
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-effect .inlinerollresult.fullfail {
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-magic .inlinerollresult.importantroll {
+  border: none;
+  background: white;
 }
 
 
