--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -56,6 +56,11 @@ button[type=roll].sheet-d100::before {
     font-family: 'dicefontd10';
     font-size: 175%;
 }
+button[type=roll].sheet-info-btn::before {
+    font-family: 'pictos custom';
+    content: 'q';
+    font-size: 125%;
+}
 button[type=roll].sheet-reduced-size {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -713,7 +718,19 @@ input.sheet-folk-magic-enabled-toggle:not(:checked) ~ div .sheet-folk-magic-enab
     display: none;
 }
 
+input.sheet-work-songs-enabled-toggle:not(:checked) ~ div .sheet-work-songs-enabled {
+    display: none;
+}
+
+input.sheet-alchemy-enabled-toggle:not(:checked) ~ div .sheet-alchemy-enabled {
+    display: none;
+}
+
 input.sheet-animism-enabled-toggle:not(:checked) ~ div .sheet-animism-enabled {
+    display: none;
+}
+
+input.sheet-artifice-enabled-toggle:not(:checked) ~ div .sheet-artifice-enabled {
     display: none;
 }
 
@@ -1677,7 +1694,15 @@ input[type="checkbox"].sheet-display-os-magic:not(:checked) ~ div.sheet-display-
     display: none;
 }
 
+input[type="checkbox"].sheet-display-alchemy:not(:checked) ~ div.sheet-display-alchemy {
+    display: none;
+}
+
 input[type="checkbox"].sheet-display-animism:not(:checked) ~ div.sheet-display-animism {
+    display: none;
+}
+
+input[type="checkbox"].sheet-display-artifice:not(:checked) ~ div.sheet-display-artifice {
     display: none;
 }
 
@@ -1909,6 +1934,25 @@ div.sheet-fetish-powers-column {
     display: inline-block;
     width: 66%;
 }
+
+div.sheet-artifice-number {
+    display: inline-block;
+    text-align: center;
+    width: 24.5%;
+}
+
+div.sheet-alchemy-techniques {
+    display: inline-block;
+    text-align: center;
+    width: 52%;
+}
+
+div.sheet-alchemical-tradition-number {
+    display: inline-block;
+    text-align: center;
+    width: 25.75%;
+}
+
 div.sheet-mediation-number {
     display: inline-block;
     text-align: center;
@@ -1928,6 +1972,16 @@ div.sheet-talent-description {
     display: inline-block;
     text-align: center;
     width: 60.5%;
+}
+div.sheet-formula-type {
+    display: inline-block;
+    text-align: center;
+    width: 12%;
+}
+div.sheet-formula-description {
+    display: inline-block;
+    text-align: center;
+    width: 66.5%;
 }
 div.sheet-la-discipline-number {
     display: inline-block;
@@ -1976,7 +2030,13 @@ div.sheet-equipment-row {
 div.sheet-equipment-item {
     display: inline-block;
     text-align: center;
-    width: 49%;
+    width: 44.75%;
+}
+
+div.sheet-equipment-btn {
+    display: inline-block;
+    text-align: center;
+    width: 4%;
 }
 
 div.sheet-equipment-location {
@@ -1990,6 +2050,16 @@ div.sheet-equipment-number {
     display: inline-block;
     text-align: center;
     width: 10%;
+}
+
+textarea.sheet-equipment-traits {
+    height: 3em;
+}
+textarea.sheet-equipment-description {
+    height: 4em;
+}
+textarea.sheet-equipment-macro {
+    height: 3em;
 }
 
 /* Wealth */
@@ -2361,6 +2431,48 @@ div.sheet-mook-btn {
 .sheet-rolltemplate-weapon .inlinerollresult.importantroll {
   border: 1px solid black;
   background: #BEBEBE;
+}
+
+.sheet-rolltemplate-effect div.sheet-header {
+  width: 100%;
+  text-align: center;
+  color: lightgray;
+  background: black;
+  font-size: 120%;
+}
+.sheet-rolltemplate-effect div.sheet-subheader {
+  width: 100%;
+  text-align: center;
+  color: lightgray;
+  background: black;
+  font-size: 75%;
+}
+.sheet-rolltemplate-effect div.sheet-content {
+  border: 1px black solid;
+  padding: 2px;
+  background: white;
+}
+.sheet-rolltemplate-effect .sheet-italics {
+  font-style: italic;
+}
+.sheet-rolltemplate-effect .inlinerollresult  {
+  display: inline-block;
+  text-align: center;
+  padding: 0px;
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-effect .inlinerollresult.fullcrit {
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-effect .inlinerollresult.fullfail {
+  border: none;
+  background: white;
+}
+.sheet-rolltemplate-magic .inlinerollresult.importantroll {
+  border: none;
+  background: white;
 }
 
 
