Option added to hide the Fate Points section of the sheet for NPCs and Extras.
Settings now wrap.

--- a/Fate Core v2/fate.css
+++ b/Fate Core v2/fate.css
@@ -446,10 +446,11 @@ button[type=roll]:hover,
 }
 
 .sheet-section-id-info {
-    max-width: calc(100% - 75px);
+    max-width: 100%;
 }
 
 .sheet-section-id-fatepoints {
+    display: none;
     max-width: 65px;
     float: right;
 }
@@ -457,6 +458,14 @@ button[type=roll]:hover,
 .sheet-section-id-fatepoints input {
     width: 100% !important;
     text-align: center;
+}
+
+.sheet-fatepoints-flag:checked ~ .sheet-section-id-info {
+    max-width: calc(100% - 75px);
+}
+
+.sheet-fatepoints-flag:checked ~ .sheet-section-id-fatepoints {
+    display: block;
 }
 
 /* === ASPECT === */
@@ -722,6 +731,7 @@ span.sheet-consequence-healing {
 /* === SETTINGS === */
 .sheet-settings {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .sheet-setting {
