--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -415,11 +415,12 @@ div.sheet-armor-col div.sheet-grid {
   grid-template-columns: 1fr 1fr;
 }
 
-.sheet-box {
-  text-align: left;
-  border: 1px solid #000;
-  padding: 0 5px 0 5px;
-  border-radius: 4px;
+div.sheet-box {
+  background-color: #ead3b8;
+  border          : 0.2em solid #2e2217;
+  border-radius   : 4px;
+  padding         : 0 5px 0 5px;
+  text-align      : left;
 }
 
 .sheet-character-attributes {
@@ -559,7 +560,7 @@ div..sheet-character-vehicle_gear {
   align-items: center;
 }
 
-.sheet-details-box1 {
+div.sheet-details-box1 {
   grid-row-start: 1;
   grid-column-start: 1;
   justify-content: space-between;
@@ -851,6 +852,9 @@ div.sheet-dice_pool-grid {
   grid-row-start: 1;
   grid-column: 1/4;
 }
+div.sheet-dice_pool-box1  h1[data-i18n="dice-pool"] {
+  text-transform: uppercase;
+}
 
 /* ---------------------------------- Talents */
 
@@ -1041,94 +1045,6 @@ div.sheet-repeating-skill-grid span {
 .sheet-armor-box8 {
   grid-row-start: 4;
   grid-column: 1/6;
-}
-
-/* ---------------------------------- Shield */
-.sheet-shield-grid {
-  display: grid;
-  grid-template-columns: auto 3em 3em;
-  grid-template-rows: max-content;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
-}
-
-.sheet-shield-box {
-  grid-row-start: 1;
-  grid-column: 1/4;
-}
-
-.sheet-shield-box1 {
-  grid-row-start: 1;
-  grid-column-start: 1;
-}
-
-.sheet-shield-box2 {
-  grid-row-start: 1;
-  grid-column-start: 2;
-}
-
-.sheet-shield-box3 {
-  grid-row-start: 1;
-  grid-column: 3;
-}
-
-.sheet-shield-box4 {
-  grid-row-start: 2;
-  grid-column: 1/4;
-}
-
-/* ---------------------------------- Consumables */
-
-.sheet-consumables-grid {
-  display: grid;
-  grid-template-columns: auto 3.5em 3em;
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
-  padding: 0 0 2px 0;
-}
-
-.sheet-consumables-grid > div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.sheet-consumables-box1 {
-  grid-row-start: 1;
-  grid-column: 1/4;
-}
-
-.sheet-consumables-box2 {
-  grid-row-start: 1;
-  grid-column: 2/3;
-}
-
-.sheet-consumables-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-consumables-box4 {
-  grid-row-start: 2;
-  grid-column-start: 1;
-}
-
-.sheet-consumables-box5 {
-  grid-row-start: 2;
-  grid-column-start: 2;
-}
-
-.sheet-consumables-box6 {
-  grid-row-start: 2;
-  grid-column-start: 3;
-}
-
-.sheet-consumables-grid div:nth-child(even) > span.sheet-header-h1 {
-  margin-left: -25px;
-}
-
-.sheet-consumables-grid div:nth-child(odd) > span.sheet-header-h1 {
-  margin-right: -25px;
 }
 
 /* ---------------------------------- Gear */
@@ -1502,32 +1418,20 @@ div.sheet-notess-box2 textarea {
 
 /* ark grid layout */
 
-.sheet-ark-grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr auto;
-  grid-template-rows: repeat(4, auto);
-  grid-column-gap: 4px;
-  grid-row-gap: 4px;
-  margin: -12px 5px 0 5px;
+div.sheet-ark div.sheet-box {
+  padding: 0px;
 }
 
-.sheet-ark-details {
-  grid-column: 1/3;
+div.sheet-ark-details-grid {
+  grid-template-columns: 2fr 1fr;
+  margin-bottom: 2%;
+}
+
+div.sheet-ark-details {
+  grid-column: 1;
   grid-row-start: 1;
 }
 
-.sheet-ark-functions {
-  grid-column-start: 1;
-}
-
-.sheet-ark-hirelings {
-  grid-column-start: 2;
-}
-
-.sheet-ark-stockpile {
-  grid-column: 1/2;
-  grid-row-start: 3;
-}
 
 .sheet-ark-notes {
   grid-column-start: 2;
@@ -1536,178 +1440,126 @@ div.sheet-notess-box2 textarea {
 
 /* ---------------------------------- ark Details */
 
-.sheet-ark-details-grid {
+div.sheet-ark-info-grid {
   display: grid;
-  grid-template-columns: 0em auto 14em auto 14em auto 3em 3em;
-  grid-row-gap: 10px;
-  padding-bottom: 10px;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
-.sheet-ark-details-grid > div {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+div.sheet-ark-development-grid h1, 
+div.sheet-ark-info-grid h1 {
+  padding       : 0.5% 2%;
+  text-align    : left;
+  text-transform: uppercase;
 }
 
-.sheet-ark-details-box1 {
-  grid-row-start: 1;
-  grid-column: 1/9;
+div.sheet-ark-info-grid h1 {
+  margin-bottom : 1%;
+  grid-column   : 1 / 8;
+  grid-row      : 1;
 }
 
-.sheet-ark-details-box2 {
-  grid-row-start: 2;
-  grid-column-start: 2;
+div.sheet-ark-info-grid span.sheet-label,
+div.sheet-ark-development-grid span.sheet-label {
+  padding: 0.5% 5%;
 }
 
-.sheet-ark-details-box3 {
-  grid-row-start: 2;
-  grid-column-start: 3;
+div.sheet-ark-info-grid span[data-i18n="type"] {
+  grid-column: 1;
+  grid-row: 2;
 }
 
-.sheet-ark-details-box4 {
-  grid-row-start: 2;
-  grid-column-start: 4;
+div.sheet-ark-info-grid hr,
+div.sheet-ark-development-grid hr  {
+  border-top : 0.1em solid #2e2217;
+  grid-column: 1 / 7;
+  margin     : 2% 0em;
+  width      : 100%;
 }
 
-.sheet-ark-details-box5 {
-  grid-row-start: 2;
-  grid-column-start: 5;
+div.sheet-ark-info-grid hr {
+  grid-row   : 3;
 }
 
-.sheet-ark-details-box6 {
-  grid-row-start: 2;
-  grid-column-start: 6;
+div.sheet-ark-info-grid input[name="attr_ark_name"] {
+  grid-column: 2 / 4;
+  grid-row: 2;
 }
 
-.sheet-ark-details-box7 {
-  grid-row-start: 2;
-  grid-column-start: 7;
+div.sheet-ark-info-grid span[data-i18n="coordinates"] {
+  grid-column: 4;
+  grid-row: 2;
 }
 
-.sheet-ark-details-box8 {
-  grid-row-start: 3;
-  grid-column: 2/3;
+div.sheet-ark-info-grid input[name="attr_ark_coordinates"] {
+  grid-column: 5 / 7;
+  grid-row: 2;
 }
 
-.sheet-ark-details-box9 {
-  grid-row-start: 3;
-  grid-column: 3/8;
+div.sheet-ark-info-grid span[data-i18n="battle-level"] {
+  grid-column: 4;
+  grid-row: 4;
 }
 
-/* ---------------------------------- ark Functions */
-
-.sheet-ark-functions-grid {
-  display: grid;
-  grid-template-columns: 2fr 3em 3fr;
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
+div.sheet-ark-info-grid span[name="attr_ark_battle_level"] {
+  background-color: #eeeeee;
+  border-color    : #6e6e6e;
+  color           : #6e6e6e;
+  cursor          : not-allowed;
+  font-style      : italic;
+  grid-column     : 5;
+  grid-row        : 4;
+  text-align      : center;
+  width           : 3em;
 }
 
-.sheet-ark-functions-grid > div,
-.sheet-ark-functions-grid > input,
-.sheet-ark-functions-grid > textarea {
-  box-sizing: border-box;
+div.sheet-ark-info-grid button.sheet-dicefontd6 {
+  grid-column: 6;
+  grid-row: 4;
+  height: 1em;
+  width: 1em;
 }
 
-.sheet-ark-functions-grid > .sheet-input-textarea {
-  height: 2.25em;
+div.sheet-ark-info-grid span[data-i18n="description"] {
+  grid-column: 1;
+  grid-row: 4;
 }
 
-.sheet-ark-functions-box {
-  grid-row-start: 1;
-  grid-column: 1/4;
+div.sheet-ark-info-grid textarea {
+  grid-column: 1 / 7;
+  grid-row   : 5;
+  margin     : 0.5% 1%;
+  width      : 96%;
 }
 
-.sheet-ark-functions-box1 {
-  grid-row-start: 1;
-  grid-column-start: 1;
+/* ----------------------------- development levels */
+
+div.sheet-ark-development-grid {
+  background-color     : #d48f43;
+  display              : grid;
+  grid-column          : 2;
+  grid-template-columns: 3fr 1fr;
 }
 
-.sheet-ark-functions-box2 {
-  grid-row-start: 1;
-  grid-column-start: 2;
+div.sheet-ark-development-grid h1 {
+  grid-row: 1;
+  grid-column: 1 / 3;
 }
 
-.sheet-ark-functions-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
+div.sheet-ark-development-grid hr {
+  border-top : 0.1em solid #2e2217;
+  grid-column: 1 / 3;
+  margin     : 2% 0em;
+  width      : 100%;
 }
 
-.sheet-ark-functions-box4 {
-  grid-row-start: 2;
-  grid-column: 1/4;
+div.sheet-ark-development-grid input[type="number"] {
+  border     : 0.1em solid #2e2217;
+  margin-left: 25%;
+  width      : 3.5em;
 }
 
-/* ---------------------------------- ark Hirelings */
-
-.sheet-ark-hirelings-grid {
-  display: grid;
-  grid-template-columns: 3fr 3em 1fr;
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
-}
-
-.sheet-ark-hirelings-box {
-  grid-row-start: 1;
-  grid-column: 1/4;
-}
-
-.sheet-ark-hirelings-box1 {
-  grid-row-start: 1;
-  grid-column-start: 1;
-}
-
-.sheet-ark-hirelings-box2 {
-  grid-row-start: 1;
-  grid-column-start: 2;
-}
-
-.sheet-ark-hirelings-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
-}
-
-.sheet-ark-hirelings-box4 {
-  grid-row-start: 2;
-  grid-column: 1/4;
-}
-
-/* ---------------------------------- ark Stockpile */
-
-.sheet-ark-stockpile-grid {
-  display: grid;
-  grid-template-columns: 11em 3em 11em 3em 11em 3em;
-  grid-template-rows: auto;
-  grid-row-gap: 2px;
-}
-
-.sheet-ark-stockpile-grid > div,
-.sheet-ark-stockpile-grid > span {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.sheet-ark-stockpile-box1 {
-  grid-row-start: 1;
-  grid-column: 1/7;
-}
-
-.sheet-ark-stockpile-box2 {
-  grid-row-start: 1;
-  grid-column-start: 2;
-}
-
-.sheet-ark-stockpile-box3 {
-  grid-row-start: 1;
-  grid-column-start: 4;
-}
-
-.sheet-ark-stockpile-box4 {
-  grid-row-start: 1;
-  grid-column-start: 6;
+div.sheet-ark-development-grid input[name="attr_ark_food_supply"] {
+  margin-top: 4%;
 }
 
 /* ---------------------------------- ark Notes */
@@ -2297,7 +2149,8 @@ span.sheet-armor-box4  {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header13.jpg");
 }
 
-div.sheet-relationships-box1 {
+div.sheet-relationships-box1,
+div.sheet-ark h1[data-i18n="ark-u"]  {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header15.jpg");
 }
@@ -2307,7 +2160,8 @@ div.sheet-rot-box {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
 }
 
-div.sheet-armor-box {
+div.sheet-armor-box,
+div.sheet-ark-development-grid h1 {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header12.jpg");
 }
