--- a/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
+++ b/5th Edition OGL by Roll20/5th Edition OGL by Roll20.css
@@ -3702,27 +3702,8 @@ span.sheet-spellconcentration
 }
 
 /* Italian */
-.charsheet.lang-it .sheet-header .sheet-part input[type=text],
-.charsheet.lang-it .sheet-header .sheet-part select {
-    border: 1px solid #666;
-    border-radius: 5px;
-    height: 38px;
-    width: 110px;
-    text-align: center;
-}
 
-.charsheet.lang-it .sheet-header .sheet-part span.sheet-display {
-    border: 1px solid #666;
-    border-radius: 5px;
-    height: 38px;
-    width: 110px;
-    text-align: center;
-    margin: 0px;
-    display: inline-block;
-    line-height: 38px;
-    font-size: 25px;
-}
-
+.charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core,
 .charsheet.lang-it input[type=radio].sheet-tab-button.sheet-core + span {
     right: 146px;
     width: 60px;
@@ -3740,21 +3721,14 @@ span.sheet-spellconcentration
     width: 90px;
 }
 
-
-
-.charsheet.lang-it .sheet-insp-prof-container .sheet-label {
-    padding-left: 3px;
+div.sheet-licensecontainer .sheet-container.sheet-pc .sheet-spells .sheet-header .sheet-header-info .sheet-part {
+    width: 23%;
 }
 
-.charsheet.lang-it .sheet-name-container span.label {
+div.sheet-licensecontainer .sheet-container:not(.sheet-npc) div.sheet-page div.sheet-header div.sheet-name-container span {
     margin-top: 19px;
     margin-left: 30px;
 }
-
-.charsheet.lang-it .sheet-col1 .sheet-skill > span {
-    min-width: 15px;
-}
-
 
 /*******************
  * CHARACTERMANCER *
