--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -1,3 +1,9 @@
+/* COLORS 
+Yellow: #fcd67b;
+Orange: #8c4110;;
+*/
+
+
 /* Text */
 h1 {
   font-family: "Times New Roman", Times, serif;
@@ -34,7 +40,7 @@ textarea {
 }
 
 .sheet-header > h1 {
-  margin: -10px 0 0 0;
+  margin: -1em 0 0 0;
 }
 
 hr.sheet-horizontal-rule {
@@ -112,6 +118,7 @@ div.sheet-header {
   text-align: center;
 }
 
+
 /* Hide actual radio */
 input.sheet-skull[type="radio"] {
   opacity: 0;
@@ -176,24 +183,23 @@ input[type="radio"].sheet-xbox:checked ~ input[type="radio"].sheet-xbox + span::
 /* Fake radio using xbox for Conditions */
 input[type="checkbox"].sheet-xbox + span::before {
   background-image: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/Vsnygg8.png);
-  margin-right: 0px;
-  margin-left: -20px;
-  line-height: 14px;
-  text-align: center;
-  display: inline-block;
-  vertical-align: middle;
-  content: url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/f3cpSW5.png);
-  width: 15px;
-  height: 15px;
-  font-size: 24px;
+  margin-right    : 0px;
+  line-height     : 14px;
+  text-align      : center;
+  display         : inline-block;
+  vertical-align  : middle;
+  content         : url(http://imgsrv.roll20.net:5100/?src=i.imgur.com/f3cpSW5.png);
+  width           : 15px;
+  height          : 15px;
+  font-size       : 24px;
 }
 
-.sheet-conditions-grid > div input.sheet-xbox {
+.sheet-injuries-grid > div input.sheet-xbox {
   z-index: 1;
-  width: 20px;
-  height: 20px;
+  width  : 20px;
+  height : 20px;
   opacity: 0;
-  margin: 0;
+  margin : 0;
 }
 
 /* Removes xbox from all radios _after_ selected one */
@@ -252,7 +258,7 @@ button {
   }
 
 button:hover {
-    color       : #fcd67b;
+    color           : #fcd67b;
     background-color: #8c4110;
 }
 
@@ -281,28 +287,29 @@ div.sheet-logo img {
 
 input {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #000000;
+  color: #302720;
 }
 
 .sheet-input,
 input[type="text"].sheet-input,
 input[type="number"].sheet-input {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #000000;
+  color: #302720;
   width: 100%;
   height: 2.25em;
 }
 
 input[type="text"].sheet-input-number,
 input[type="number"].sheet-input-number {
-  color: #000000;
+  border    : 0.1em solid #302720;
+  color     : #302720;
   text-align: center;
-  width: 100%;
+  width     : 100%;
 }
 
 select.sheet-input {
   width: 100%;
-  color: #000000;
+  color: #302720;
   padding: 0;
   margin: 0;
 }
@@ -446,7 +453,7 @@ div.sheet-box {
 
 .sheet-character-weapons {
   grid-row-start: 6;
-  grid-column: 1/4;
+  grid-column: 1 / 3;
 }
 
 .sheet-character-skills {
@@ -547,38 +554,36 @@ div..sheet-character-vehicle_gear {
 
 /* ---------------------------------- Details */
 
-.sheet-details-grid {
-  display: grid;
-  grid-template-columns: 1fr 4fr 1fr 4fr 3fr 3fr 3fr 3fr;
-  grid-column-gap: 2px;
-  grid-row-gap: 10px;
-  padding-top: 5px;
+div.sheet-details-grid {
+  grid-template-columns: 1fr 4fr 1fr 4fr;
+  padding              : 0.3em;
 }
 
-.sheet-details-grid > div {
-  display: flex;
-  align-items: center;
+div.sheet-details-grid span[data-i18n="name"],
+div.sheet-details-grid span[data-i18n="role"]  {
+  grid-row-start   : 1;
+  text-align: center;
+  padding: 5%;
 }
 
-div.sheet-details-box1 {
-  grid-row-start: 1;
+div.sheet-details-grid input[name="attr_character_name"],
+div.sheet-details-grid input[name="attr_role"]  {
+  grid-row-start   : 1;
+}
+
+div.sheet-details-grid span[data-i18n="name"] {
   grid-column-start: 1;
-  justify-content: space-between;
 }
 
-.sheet-details-box2 {
-  grid-row-start: 1;
+div.sheet-details-grid input[name="attr_role"]  {
   grid-column-start: 2;
 }
 
-.sheet-details-box3 {
-  grid-row-start: 1;
+div.sheet-details-grid span[data-i18n="role"] {
   grid-column-start: 3;
-  justify-content: space-between;
 }
 
-.sheet-details-box4 {
-  grid-row-start: 1;
+div.sheet-details-grid input[name="attr_role"] {
   grid-column-start: 4;
 }
 
@@ -634,208 +639,204 @@ div.sheet-details-box1 {
   margin: 2%;
 }
 
-/* ---------------------------------- Conditions */
-
-.sheet-conditions-grid {
-  display: grid;
-  grid-template-columns: 1fr 2em 1fr 2em 1fr 2em 1fr 2em 1fr 1fr;
-}
-
-.sheet-conditions-grid > div {
-  display: flex;
-  align-items: center;
-}
-
-.sheet-conditions-box2 {
-  grid-row-start: 2;
-  grid-column-start: 2;
-}
-
-.sheet-conditions-box3 {
-  grid-row-start: 2;
-  grid-column-start: 3;
-}
-
-.sheet-conditions-box4 {
-  grid-row-start: 2;
-  grid-column-start: 4;
-}
-
-.sheet-conditions-box5 {
-  grid-row-start: 2;
-  grid-column-start: 5;
-}
-
-.sheet-conditions-box6 {
-  grid-row-start: 2;
-  grid-column-start: 6;
-}
-
-.sheet-conditions-box7 {
-  grid-row-start: 2;
-  grid-column-start: 7;
-}
-
-.sheet-conditions-box8 {
-  grid-row-start: 2;
-  grid-column-start: 8;
-}
-
-.sheet-conditions-box9 {
-  grid-row-start: 2;
-  grid-column-start: 9;
-}
-
-input.sheet-conditions-starving:checked ~ div > span.sheet-conditions-starving,
-input.sheet-conditions-sleepless:checked ~ div > span.sheet-conditions-sleepless,
-input.sheet-conditions-dehydrated:checked ~ div > span.sheet-conditions-dehydrated,
-input.sheet-conditions-hypothermic:checked ~ div > span.sheet-conditions-hypothermic {
-  color: #800000;
-  font-weight: bold;
-}
-
 /* ---------------------------------- Critical Injuries */
 
-.sheet-injuries-grid {
-  display: grid;
-  grid-template-columns: 6fr 5em 2fr 6em;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
+div.sheet-injuries-grid {
+  grid-template-columns: 1fr 6fr 5fr 1fr 6fr 5fr;
+}
+
+div.sheet-injuries-grid hr  {
+   border-top : 0.1em solid #2e2217;
+   grid-column: 1 / 7;
+   margin     : 2% 0em;
+   width      : 100%;
+}
+
+div.sheet-injuries-grid hr:nth-of-type(2)  {
+  grid-column: 1 / 7;
+}
+
+div.sheet-injuries-grid span[data-i18n="starving"],
+div.sheet-injuries-grid span[data-i18n="dehydrated"],
+div.sheet-injuries-grid span[data-i18n="sleepless"],
+div.sheet-injuries-grid span[data-i18n="hypothermic"] {
+  text-align: center;
+}
+
+div.sheet-injuries-grid input[name="attr_hungry"],
+div.sheet-injuries-grid input[name="attr_hungry"] + span,
+div.sheet-injuries-grid span[data-i18n="starving"],
+div.sheet-injuries-grid input[name="attr_thirsty"],
+div.sheet-injuries-grid input[name="attr_thirsty"] + span,
+div.sheet-injuries-grid span[data-i18n="dehydrated"]   {
+  grid-row: 2;
+}
+
+div.sheet-injuries-grid hr:nth-of-type(1)  {
+  grid-row: 3;
+}
+
+div.sheet-injuries-grid input[name="attr_sleepy"],
+div.sheet-injuries-grid input[name="attr_sleepy"] + span,
+div.sheet-injuries-grid span[data-i18n="sleepless"],
+div.sheet-injuries-grid input[name="attr_cold"],
+div.sheet-injuries-grid input[name="attr_cold"] + span,
+div.sheet-injuries-grid span[data-i18n="hypothermic"] {
+  grid-row: 5;
+}
+
+div.sheet-injuries-grid hr:nth-of-type(1)  {
+  grid-row: 6;
+}
+
+div.sheet-injuries-grid input[name="attr_hungry"],
+div.sheet-injuries-grid input[name="attr_hungry"] + span,
+div.sheet-injuries-grid input[name="attr_sleepy"],
+div.sheet-injuries-grid input[name="attr_sleepy"] + span  {
+  grid-column: 1;
+}
+
+div.sheet-injuries-grid span[data-i18n="starving"],
+div.sheet-injuries-grid span[data-i18n="sleepless"]  {
+  grid-column: 2 / 4;
+}
+
+div.sheet-injuries-grid input[name="attr_thirsty"],
+div.sheet-injuries-grid input[name="attr_thirsty"] + span,
+div.sheet-injuries-grid input[name="attr_cold"],
+div.sheet-injuries-grid input[name="attr_cold"] + span  {
+  grid-column: 4;
+}
+
+div.sheet-injuries-grid span[data-i18n="dehydrated"],
+div.sheet-injuries-grid span[data-i18n="hypothermic"]  {
+  grid-column: 5 / 7;
+}
+
+input[name="attr_hungry"]:checked ~ span[data-i18n="starving"],
+input[name="attr_sleepy"]:checked ~ span[data-i18n="sleepless"],
+input[name="attr_thirsty"]:checked ~ span[data-i18n="dehydrated"],
+input[name="attr_cold"]:checked ~ span[data-i18n="hypothermic"] {
+  color      : #800000;
+  font-weight: bold;
 }
 
 .sheet-injuries-grid label {
   font-size: 1em;
 }
 
-.sheet-injuries-box1 {
+div.sheet-injuries-header {
   grid-row-start: 1;
-  grid-column: 1/6;
+  grid-column   : 1 / 7;
 }
 
-.sheet-injuries-box2 {
+div.sheet-injuries-box {
+  grid-row-start: 7;
+  grid-column   : 1 / 7;
+}
+
+div.sheet-injuries-grid label[data-i18n="injury"],
+div.sheet-injuries-grid input[name="attr_injury_name"] {
   grid-row-start: 1;
-  grid-column-start: 1;
 }
 
-.sheet-injuries-box3 {
+div.sheet-injuries-grid label[data-i18n="lethal"],
+div.sheet-injuries-grid select[name="attr_injury_lethal"] {
   grid-row-start: 2;
-  grid-column-start: 1;
-  grid-column-end: 2;
 }
 
-.sheet-injuries-box4 {
-  grid-row-start: 3;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.sheet-injuries-box5 {
-  grid-row-start: 4;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.sheet-injuries-box6 {
-  grid-row-start: 5;
-  grid-column-start: 1;
-  grid-column-end: 2;
-}
-
-.sheet-injuries-box7 {
-  grid-row-start: 2;
-  grid-column: 1/6;
-}
-
-.sheet-injuries-box8 {
-  grid-column-start: 2;
-  grid-row-start: 1;
-  grid-column-end: 6;
-}
-
-.sheet-injuries-box9 {
-  grid-column-start: 2;
-  grid-row-start: 2;
-  grid-column-end: 4;
-}
-
-.sheet-injuries-box10 {
-  grid-column-start: 2;
-  grid-column-end: 6;
+div.sheet-injuries-grid label[data-i18n="time-limit"],
+div.sheet-injuries-grid input[name="attr_injury_time_limit"]  {
   grid-row-start: 3;
 }
 
-.sheet-injuries-box11 {
-  grid-column-start: 2;
-  grid-column-end: 6;
+div.sheet-injuries-grid label[data-i18n="effects"],
+div.sheet-injuries-grid input[name="attr_injury_effects"]  {
   grid-row-start: 4;
 }
 
-.sheet-injuries-box12 {
-  grid-column-start: 2;
-  grid-column-end: 6;
+div.sheet-injuries-grid label[data-i18n="healing-time"],
+div.sheet-injuries-grid input[name="attr_injury_heal_time"]  {
   grid-row-start: 5;
+}
+
+div.sheet-injuries-grid label[data-i18n="injury"],
+div.sheet-injuries-grid label[data-i18n="lethal"],
+div.sheet-injuries-grid label[data-i18n="time-limit"],
+div.sheet-injuries-grid label[data-i18n="effects"],
+div.sheet-injuries-grid label[data-i18n="healing-time"]   {
+  grid-column: 1 / 3;
+}
+
+div.sheet-injuries-grid input[name="attr_injury_name"],
+div.sheet-injuries-grid select[name="attr_injury_lethal"],
+div.sheet-injuries-grid input[name="attr_injury_time_limit"],
+div.sheet-injuries-grid input[name="attr_injury_effects"],
+div.sheet-injuries-grid input[name="attr_injury_heal_time"]  {
+  grid-column: 3 / 7;
 }
 
 
 /* ---------------------------------- Weapons */
 
-.sheet-weapons-grid {
-  display: grid;
-  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 2fr 9fr;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
+div.sheet-weapons-grid {
+  grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 9fr;
   padding: 0 0 2px 0;
 }
 
-.sheet-weapons-box {
-  grid-row-start: 1;
-  grid-column: 1/10;
+div.sheet-weapons-grid div.sheet-weapons-box {
+  grid-column: 1 / 8;
+  grid-row   : 1;
 }
 
-.sheet-weapons-box1 {
-  grid-row-start: 1;
-  grid-column-start: 1;
+div.sheet-weapons-grid span.sheet-column-header,
+div.sheet-weapons-grid span[data-i18n="name"],
+div.sheet-weapons-grid input[name="attr_weapon_name"],
+div.sheet-weapons-grid select[name="attr_weapon_skill"],
+div.sheet-weapons-grid select[name="attr_weapon_bonus"],
+div.sheet-weapons-grid input[name="attr_weapon_damage"],
+div.sheet-weapons-grid input[name="attr_weapon_features"]  {
+  grid-row: 1;
 }
 
-.sheet-weapons-box2 {
-  grid-row-start: 1;
-  grid-column-start: 2;
+div.sheet-weapons-grid button.sheet-dicefontd6 {
+  grid-row: 2;
 }
 
-.sheet-weapons-box3 {
-  grid-row-start: 1;
-  grid-column-start: 3;
+div.sheet-weapons-grid button.sheet-dicefontd6 {
+  grid-column: 1;
 }
 
-.sheet-weapons-box4 {
-  grid-row-start: 1;
-  grid-column-start: 4;
+div.sheet-weapons-grid span[data-i18n="name"],
+div.sheet-weapons-grid input[name="attr_weapon_name" ] {
+  grid-column: 2;
 }
 
-.sheet-weapons-box5 {
-  grid-row-start: 1;
-  grid-column-start: 5;
+div.sheet-weapons-grid span[data-i18n="skill"],
+div.sheet-weapons-grid select[name="attr_weapon_skill"] {
+  grid-column: 3;
 }
 
-.sheet-weapons-box6 {
-  grid-row-start: 1;
-  grid-column-start: 6;
+div.sheet-weapons-grid span[data-i18n="bonus"],
+div.sheet-weapons-grid select[name="attr_weapon_bonus"] {
+  grid-column: 4;
 }
 
-.sheet-weapons-box7 {
-  grid-row-start: 1;
-  grid-column-start: 7;
+div.sheet-weapons-grid span[data-i18n="dmg-abbr"],
+div.sheet-weapons-grid input[name="attr_weapon_damage"] {
+  grid-column: 5;
 }
 
-.sheet-weapons-box8 {
-  grid-row-start: 1;
-  grid-column-start: 8;
+div.sheet-weapons-grid span[data-i18n="range"],
+div.sheet-weapons-grid select[name="attr_weapon_range" ] {
+  grid-column: 6;
 }
 
-.sheet-weapons-box9 {
-  grid-row-start: 2;
-  grid-column: 1/10;
+div.sheet-weapons-grid span[data-i18n="features"],
+div.sheet-weapons-grid input[name="attr_weapon_features"] {
+  grid-column: 7;
 }
+
 
 /* ---------------------------------- Dice Pool */
 
@@ -1767,7 +1768,7 @@ input.sheet-negative:checked + span::before {
   grid-gap: 1px;
   background-color: transparent;
   padding: 0;
-  margin: 10px 2px 2px 2px;
+  margin: 0em 0.2em 0.2em 0.2em;
   grid-template-columns: repeat(6, 1fr);
 }
 
@@ -2110,7 +2111,7 @@ div.sheet-appearance-box1 {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header7.jpg");
 }
 
-div.sheet-injuries-box1 {
+div.sheet-injuries-header {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header2.jpg");
 }
