Added equipment and money to compact/mook sheets

--- a/Mythras/Mythras.css
+++ b/Mythras/Mythras.css
@@ -2225,6 +2225,16 @@ textarea.sheet-compact-notes {
     height: 115px;
     width: calc(100% - 2px);
 }
+div.sheet-compact-equipment-section {
+    float: left;
+    width: 420px;
+    margin-right: 5px;
+}
+div.sheet-compact-money-section {
+    float: left;
+    width: 420px;
+    margin-right: 5px;
+}
 
 /* Mooks */
 div.sheet-mook-page-width {
