--- a/Mutant Year Zero/mutantyearzero.css
+++ b/Mutant Year Zero/mutantyearzero.css
@@ -425,8 +425,8 @@ div.sheet-armor-col div.sheet-grid {
 div.sheet-box {
   background-color: #ead3b8;
   border          : 0.2em solid #2e2217;
-  border-radius   : 4px;
-  padding         : 0 5px 0 5px;
+  border-radius   : 0.1em;
+  padding         : 0 0.4em;
   text-align      : left;
 }
 
@@ -778,15 +778,23 @@ div.sheet-injuries-grid input[name="attr_injury_heal_time"]  {
 
 
 /* ---------------------------------- Weapons */
+div.sheet-weapons-box-header,
+div.sheet-weapons-box {
+  grid-column: 1 / 8;
+}
+
 
 div.sheet-weapons-grid {
   grid-template-columns: 1fr 6fr 2fr 2fr 2fr 2fr 9fr;
   padding: 0 0 2px 0;
 }
 
-div.sheet-weapons-grid div.sheet-weapons-box {
-  grid-column: 1 / 8;
+div.sheet-weapons-box-header {
   grid-row   : 1;
+}
+
+div.sheet-repeating-weapons-grid {
+  grid-template-columns: 1fr 7fr 2fr 2fr 2fr 2fr 10fr
 }
 
 div.sheet-weapons-grid span.sheet-column-header,
@@ -800,7 +808,7 @@ div.sheet-weapons-grid input[name="attr_weapon_features"]  {
 }
 
 div.sheet-weapons-grid button.sheet-dicefontd6 {
-  grid-row: 2;
+  grid-row: 1;
 }
 
 div.sheet-weapons-grid button.sheet-dicefontd6 {
@@ -860,10 +868,7 @@ div.sheet-dice_pool-box1  h1[data-i18n="dice-pool"] {
 /* ---------------------------------- Talents */
 
 .sheet-talents-grid {
-  display: grid;
   grid-template-columns: auto 4em 3em;
-  grid-row-gap: 2px;
-  grid-column-gap: 2px;
 }
 
 div.sheet-talents-grid span {
@@ -2039,8 +2044,8 @@ div.sheet-dots input[type="radio"] + span {
 }
 
 div.sheet-dots input[type="radio"]:checked ~ input[type="radio"] + span {    
-   background-color: transparent;
-   color: #2d281d;
+   background-color: #fff;
+   color           : #2d281d;
 }
 
 div.sheet-rot-grid input[type="number"].sheet-input-number {
@@ -2126,12 +2131,6 @@ div.sheet-dice_pool-box1 {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
 }
 
-div.sheet-dice_pool-box1 {
-  background-size: cover;
-  background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header.jpg");
-}
-
-
 div.sheet-talents-box {
   background-size: cover;
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header9.jpg");
@@ -2142,7 +2141,7 @@ div.sheet-mutant-box {
   background-image: url("https://raw.githubusercontent.com/clevett/roll20-character-sheets/myz-fl/Mutant%20Year%20Zero/images/header10.jpg");
 }
 
-div.sheet-weapons-box,
+div.sheet-weapons-box-header,
 div.sheet-gear-box1,
 div.sheet-gear-box6,
 span.sheet-armor-box4  {
