--- a/Forbidden_Lands/Forbidden_Lands.css
+++ b/Forbidden_Lands/Forbidden_Lands.css
@@ -267,13 +267,20 @@ div.sheet-tab-content {
 }
 
 input.sheet-character:checked ~ div.sheet-character,
-input.sheet-stronghold:checked ~ div.sheet-stronghold {
+input.sheet-stronghold:checked ~ div.sheet-stronghold,
+input.sheet-dice_only:checked ~ div.sheet-character {
    display: block;
 }
 
+input.sheet-dice_only:checked ~ div.sheet-character .sheet-toggle-dice-only {
+  display: none;
+}
+
 input[type='radio'].sheet-tab {
-   width: 162px;
-   height: 30px;
+   width: 100px;
+   height: 20px;
+   font-size: 1.1em;
+   font-family: "Times New Roman", Times, serif;
    float: left;
    margin: 0;
    -webkit-appearance: none;
@@ -295,9 +302,8 @@ input.sheet-tab::before {
    text-align: center;
    display: block;
    color: #444;
-   width: 160px;
-   line-height: 30px;
-   font-size: 16px;
+   width: 100px;
+   line-height: 20px;
 }
 
 input.sheet-tab:active,
@@ -314,6 +320,10 @@ input.sheet-tab:checked:hover::before {
    border: 1px solid #444;
    border-bottom: 1px solid #fff;
    background: #fff;
+   height: 24px;
+   width: 100px;
+   margin: -4px 0 0 -2px;
+   font-weight: bold;
 }
 
 .sheet-wrapper {
@@ -1970,13 +1980,13 @@ input.sheet-legendary:checked + span::before {
 .sheet-rolltemplate-forbiddenlands div.sheet-template-header {
   background-color: #000;
   font-family: "Times New Roman", Times, serif;
-  font-size: 1.1em;
+  font-size: 1em;
   font-weight: bold;
   word-break: break-word;
   color: #FFF;
   display: flex;
   justify-content: space-between;
-  padding: 4px 5px 4px 5px;
+  padding: 2px 5px 2px 5px;
   margin: 2px -5px 2px -5px;
 }
 
